test/error/CMakeFiles/error_undefined_func_compile.dir/depend.make
# Empty dependencies file for error_undefined_func_compile.
# This may be replaced when dependencies are built.
